k8s-app/deployment-app.yaml
# Aquí se especifica la versión de la API de Kubernetes que se está utilizando y el tipo de recurso que se está definiendo, en este caso "apps/v1" y "Deployment" respectivamente.
apiVersion: apps/v1
kind: Deployment
#En la sección "metadata" se especifican los metadatos relacionados con el despliegue, como su nombre y etiquetas. En este caso, se establece la etiqueta "app: quiz-app" y se establece el nombre del despliegue como "quiz-app" y el namespace como "practica"
metadata:
  labels:
    app: quiz-app
  name: quiz-app
  namespace: practica
# En "spec" se especifican los detalles del despliegue. Se establece que se deben ejecutar 1 réplica de la aplicación y se establecen las etiquetas de selección para que solo se ejecuten las réplicas en pods que tengan la etiqueta "app: quiz-app". Se establece una estrategia vacía, pero se podría especificar una estrategia de escalabilidad aquí si fuera necesario.
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-app
  strategy: {}
# En la sección "template" se especifican los detalles del pod que se ejecutará. En su interior tenemos otra sección de "metadata" en la que se establecen las mismas etiquetas que en la sección "spec" anterior. Por otro lado, en la siguiente sección "spec" se especifican las configuraciones del contenedor, como la imagen del contenedor, los recursos permitidos, las variables de entorno y las pruebas de vitalidad y disponibilidad.
  template:
    metadata:
      labels:
        app: quiz-app
    spec:
# "affinity", aquí se establece una afinidad y una anti-afinidad de los pods para asegurar que se ejecuten en un host específico.      
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: quiz-app-db
                namespaces:
                  - "practica"
                topologyKey: kubernetes.io/hostname
              weight: 1
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: quiz-app
                namespaces:
                  - "practica"
                topologyKey: kubernetes.io/hostname
              weight: 1
# "containers" especifica los contenedores que se ejecutarán en el pod. En este caso, se está especificando un solo contenedor.      
      containers:
# se especifica la imagen del contenedor utilizada, en este caso "carlosfeufernandez/app-quiz-pf:latest" y que el nombre del contenedor será "app-quizz-pf". El puerto 5000 será el expuesto y además se establecen los recursos que en este caso 512Mi de memoria y 200m de CPU.     
      - image: carlosfeufernandez/app-quiz-pf:latest
        name: app-quiz-pf
        ports:
          - containerPort: 5000
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
# En la sección "env" se establecen las variables de entorno para el contenedor, en este caso se establece una variable de entorno llamada "MONGODB_URI" y se establece el valor desde un secreto llamado "secret-db" y la clave "MONGODB_URI"        
        livenessProbe:
          httpGet:
            path: /auth/register
            port: 5000
          failureThreshold: 1
          periodSeconds: 10
          initialDelaySeconds: 25
# "readinessProbe" establece las configuraciones para la prueba de disponibilidad del contenedor. Esta prueba se realiza mediante una petición HTTP GET al path "/auth/register" en el puerto 5000.        
        readinessProbe:
          httpGet:
            path: /auth/register
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 5
# "initContainers" especifica un contenedor llamado "check-db" con una imagen "busybox:1.28" y un comando para ejecutar una verificación de conexión a un servicio llamado "quiz-app-service" en el puerto 27017      
status: {}
